Fix navbar resizing on route switch when scrollbar disappears on desktop browsers

--- a/src/features/weather/Navbar/Navbar.scss
+++ b/src/features/weather/Navbar/Navbar.scss
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 100vw;
   height: $nav-height;
   background-color: $primary-bg-color;
   .navbar-content {
